# FlappyBirdDemo

./: .gitignore  .gitmodules  README.md  appveyor.yml
flappy_bird/data/ui.xml.ox/: meta.xml
flappy_bird/data/xmls/: ui.xml
flappy_bird/project/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh
flappy_bird/project/proj.android/src/org/oxygine/flappy_bird/: MainActivity.java
flappy_bird/project/proj.cmake/: CMakeLists.txt  run.sh
flappy_bird/project/proj.ios/flappy_bird_ios.xcodeproj/: project.pbxproj
flappy_bird/project/src/: Box2DDebugDraw.cpp  Box2DDebugDraw.h  DeadZone.cpp  DeadZone.h  FlappyBirdBootstrap.cpp  FlappyBirdBootstrap.h  Game.cpp  Game.h  GameFinishedEvent.cpp  GameFinishedEvent.h  GameMenu.cpp  GamePhysicsWorldContactProcessor.cpp  GamePhysicsWorldContactProcessor.h  GameResultDialog.cpp  GameResultDialog.h  GameScene.cpp  GameScene.h  GameplaySession.cpp  GameplaySession.h  GlobalSettings.h  MainMenuScene.cpp  MainMenuScene.h  Obstacle.cpp  Obstacle.h  ObstacleController.cpp  ObstacleController.h  ObstacleGroup.cpp  ObstacleGroup.h  ObstacleGroupDefinition.cpp  PhyData.h  PhysicsBasedActor.cpp  PhysicsBasedActor.h  Player.cpp  Player.h  Random.hpp  SafeAreaTrigger.cpp  SafeAreaTrigger.h  main.cpp
patches/: oxygine_flow_support_callbacks.patch  oxygine_python3_support.patch
